--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             <!-- .hentry -->
                             <article class="hentry post has-post-thumbnail">
                             
-                              <div class="post-thumbnail post-img" style="background-image:url(images/blog/goa.JPG)">
+                              <div class="post-thumbnail post-img" style="background-image:url(images/blog/goa3.jpg)">
                                     <a href="blog-goa.html">A Trip To goa</a>
                                         
                                     <!-- .entry-header -->
